--- a/sytle.css
+++ b/sytle.css
@@ -3,3 +3,10 @@ body {
     background-color: black;
      
 }
+
+
+ ul {
+    display:flex
+    justify-content: space-between; 
+    list-style-type: disc;
+ }
