--- a/sytle.css
+++ b/sytle.css
@@ -1,6 +1,7 @@
 body {
     color: white;
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
      
 }
 
@@ -8,5 +9,7 @@ body {
  ul {
     display:flex
     justify-content: space-between; 
-    list-style-type: disc;
+    list-style-type: nome;
+    align-items: center;
+    pading: 16px;
  }
