--- a/sytle.css
+++ b/sytle.css
@@ -7,9 +7,9 @@ body {
 
 
  ul {
-    display: flex
-    justify-content: space-between
-    list-style-type: nome;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
     align-items: center;
     padding: 16px;
  }
