--- a/sytle.css
+++ b/sytle.css
@@ -23,5 +23,5 @@ body {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 5px solid white;
+    border: 5px solid blue;
   }
